@@ -1,3 +1,13 @@
+/* 
+ * patternlab-node - v0.1.6 - 2014 
+ * 
+ * Brian Muenzenmeyer, and the web community.
+ * Licensed under the MIT license. 
+ * 
+ * Many thanks to Brad Frost and Dave Olsen for inspiration, encouragement, and advice. 
+ *
+ */
+
 (function () {
 	"use strict";
 
